config/deployment-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evento-api-deployment
  labels:
    app: evento-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evento-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: evento-api
    spec:
      containers:
      - name: evento-api
        image: registry.digitalocean.com/riccardone/evento-api:c09e225   
        ports:
        - containerPort: 5000
        - containerPort: 5001
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: "/health"
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: "/health"
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5          
---
apiVersion: v1
kind: Service
metadata:
  name: evento-api-service  
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "4541eb86-05e6-40ef-992c-4851c68432aa"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5001
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: evento-api
