config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evento-api-deployment
  labels:
    app: evento-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evento-api
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  # minReadySeconds: 5
  template:
    metadata:
      labels:
        app: evento-api
    spec:
      containers:
      - name: evento-api
        image: <IMAGE>        
        ports:
          - name: http
            containerPort: 80
            protocol: TCP 
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 128Mi   
        volumeMounts:
          - name: config-volume
            mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: evento-api-config
        # envFrom:
        # - configMapRef:
        #     name: evento-api-config
        # livenessProbe:
        #   httpGet:
        #     path: "/health"
        #     port: 80
        #   initialDelaySeconds: 6
        #   periodSeconds: 12
        # readinessProbe:
        #   httpGet:
        #     path: "/health"
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: evento-api-service  
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "4541eb86-05e6-40ef-992c-4851c68432aa"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: ClusterIP
  ports:    
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: evento-api
